Compatible server showing + option to show / hide outdated

--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -109,6 +109,11 @@ table#serversTable {
 	float:right;
 }
 
+#toggleOutdated {
+	margin-bottom: 17px;
+	color: white;
+}
+
 #direct-connect-button {
 	width: 425px;
 }
