--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -197,6 +197,17 @@ input[type="text"] {
   margin-right: 15px;
 }
 
+input[type="password"] {
+  display: block;
+  width: 400px;
+  margin: 0 0 20px;
+  padding: 8px 12px 10px 12px;
+  border: 1px solid rgba(0,0,0,.5);
+  background: rgba(0,0,0,.25);
+  color:white;
+  margin-right: 15px;
+}
+
 .row {
     width: 100%;
     padding-top: 10px;
@@ -262,3 +273,23 @@ md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
 [placeholder]:-ms-input-placeholder { color: rgba(255,255,255,.8); }
 [placeholder]:hover:-ms-input-placeholder { color: rgba(255,255,255,.4); }
 [placeholder]:focus:-ms-input-placeholder { color: transparent; }
+
+.text-white {
+	color: white;
+}
+
+#MultiplayerLoginBody {
+	position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(1,1,1,0.7);
+  z-index: 3;
+}
+
+#LoginContainer {
+	width: 500px;
+  height: 500px;
+  left: calc(50vw - 500px);
+  top: calc(50vh - 500px);
+  position: absolute;
+}
