updating UI files for 0.21.0
updating UI files for 0.21.0

--- a/ui/modules/mainmenu/mainmenu.css
+++ b/ui/modules/mainmenu/mainmenu.css
@@ -45,6 +45,9 @@
   -webkit-animation: zoomIn 0.25s forwards ease-out;
 }
 
+.mainmenu .tile:hover a {
+  -webkit-animation: zoomIn 0.25s forwards ease-out;
+}
 
 @-webkit-keyframes zoomIn {
   100% { -webkit-transform: scale(1.1); }
