--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -109,6 +109,8 @@ table#serversTable {
 	/*border: 2px solid #555555;*/
 	margin:0px;
 	margin-bottom:20px;
+	
+	margin-left: 15px;
 }
 
 .button:hover {
@@ -130,6 +132,7 @@ table#serversTable {
 
 #direct-connect-button {
 	width: 425px;
+	margin-left: 0px;
 }
 
 #launcher-connect-button {
@@ -198,7 +201,6 @@ input[type="text"] {
   border: 1px solid rgba(0,0,0,.5);
   background: rgba(0,0,0,.25);
   color:white;
-  margin-right: 15px;
 }
 
 input[type="password"] {
