--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -7,6 +7,12 @@
 	background-color:#404040b8;
 }
 
+#map-select {
+	height: 40px;
+	background: unset;
+	color: white !important;
+}
+
 #back {
 	width:100%;
 	height: 100%;
