First version of new UI almost done, pending some more work by @20dka

--- a/ui/modules/mainmenu/mainmenu.css
+++ b/ui/modules/mainmenu/mainmenu.css
@@ -354,6 +354,14 @@
     padding: 5px;
 }
 
+#onlineplayers {
+  /* border-bottom:2px solid #56D70B; */
+  color: rgb(255, 255, 255);;
+  text-align:center;
+  padding:5px;
+  font-weight: 700;
+}
+
 #onlinestate {
   /* border-bottom:2px solid #56D70B; */
   color: #56D70B;
