--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -37,6 +37,15 @@ table#serversTable {
   transition: 0.2s;
 }
 
+#serversTable th, #serversTable td{
+  flex: 1;
+}
+
+#serversTable tr{
+  display: flex;
+  flex-direction: row;
+}
+
 #serversTable th:hover {
   background-color: rgba(0, 0, 0, 0.25);
 }
