--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -5,37 +5,37 @@
   --bg-secondary: rgba(41, 38, 38, 0.7);
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-.flex-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: center;
-    width: 100%;
-}
-
 .main-container {
   display: flex;
   flex-flow: column;
-  width: 95%;
-  height: 95%;
-  margin: 2em;
+  width: 100%;
+  height: 100%;
+}
+
+.top-nav {
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 4em;
+  padding: 0;
+}
+
+.top-nav > * {
+  margin: 0 0.5em;
+  gap: 0.5em;
 }
 
 #primary-div {
-  border-radius: 5px;
-  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.55);
 }
 
 #serversTableBody {
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
+
 /* CUSTOM END */
 
 .offset-div {
@@ -67,7 +67,7 @@
 }
 
 table#serversTable {
-  width: 99%;
+  width: 100%;
   color: white;
   margin-left: auto;
   margin-right: auto;
@@ -76,8 +76,10 @@ table#serversTable {
 }
 
 #serversTable th {
+  background-color: var(--bg-secondary);
   color: white;
   transition: 0.2s;
+  padding: 0.5em;
 }
 
 #serversTable th:hover {
@@ -141,6 +143,7 @@ table#serversTable {
   margin: 0 10px 0 0;
   background: #576ebf;
 }
+
 #launcher-connect-button:hover {
   background-color: #374eaf;
 }
@@ -259,9 +262,11 @@ md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
 [placeholder]::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.8);
 }
+
 [placeholder]:hover::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.4);
 }
+
 [placeholder]:focus::-webkit-input-placeholder {
   color: transparent;
 }
@@ -269,9 +274,11 @@ md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
 [placeholder]::-moz-placeholder {
   color: rgba(255, 255, 255, 0.8);
 }
+
 [placeholder]:hover::-moz-placeholder {
   color: rgba(255, 255, 255, 0.4);
 }
+
 [placeholder]:focus::-moz-placeholder {
   color: transparent;
 }
@@ -279,9 +286,11 @@ md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
 [placeholder]:-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.8);
 }
+
 [placeholder]:hover:-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.4);
 }
+
 [placeholder]:focus:-ms-input-placeholder {
   color: transparent;
 }
@@ -324,16 +333,19 @@ md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
   animation-duration: 0.3s;
   animation-delay: 0.1s;
 }
+
 .icon__signal-strength .bar-2 {
   height: 50%;
   animation-duration: 0.25s;
   animation-delay: 0.2s;
 }
+
 .icon__signal-strength .bar-3 {
   height: 75%;
   animation-duration: 0.2s;
   animation-delay: 0.3s;
 }
+
 .icon__signal-strength .bar-4 {
   height: 100%;
   animation-duration: 0.15s;
@@ -385,300 +397,438 @@ md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
 .flag-AD {
   background-position: -4px -3px;
 }
+
 .flag-AE {
   background-position: -37px -3px;
 }
+
 .flag-AG {
   background-position: -4px -24px;
 }
+
 .flag-AM {
   background-position: -37px -24px;
 }
+
 .flag-AR {
   background-position: -4px -45px;
 }
+
 .flag-AT {
   background-position: -37px -45px;
 }
+
 .flag-AU {
   background-position: -4px -66px;
 }
+
 .flag-BE {
   background-position: -37px -66px;
 }
+
 .flag-BF {
   background-position: -4px -87px;
 }
+
 .flag-BG {
   background-position: -37px -87px;
 }
+
 .flag-BO {
   background-position: -4px -108px;
 }
+
 .flag-BR {
   background-position: -37px -108px;
 }
+
 .flag-CA {
   background-position: -4px -129px;
 }
+
 .flag-CD {
   background-position: -37px -129px;
 }
+
 .flag-CG {
   background-position: -4px -150px;
 }
+
 .flag-CH {
   background-position: -37px -150px;
 }
+
 .flag-CL {
   background-position: -4px -171px;
 }
+
 .flag-CM {
   background-position: -37px -171px;
 }
+
 .flag-CN {
   background-position: -4px -192px;
 }
+
 .flag-CO {
   background-position: -37px -192px;
 }
+
 .flag-CZ {
   background-position: -4px -213px;
 }
+
 .flag-DE {
   background-position: -37px -213px;
 }
+
 .flag-DJ {
   background-position: -4px -234px;
 }
+
 .flag-DK {
   background-position: -37px -234px;
 }
+
 .flag-DZ {
   background-position: -4px -255px;
 }
+
 .flag-EE {
   background-position: -37px -255px;
 }
+
 .flag-EG {
   background-position: -4px -276px;
 }
+
 .flag-ES {
   background-position: -37px -276px;
 }
+
 .flag-FL {
   background-position: -4px -297px;
 }
+
 .flag-FR {
   background-position: -37px -297px;
 }
+
 .flag-GA {
   background-position: -4px -318px;
 }
+
 .flag-GB {
   background-position: -37px -318px;
 }
+
 .flag-GM {
   background-position: -4px -339px;
 }
+
 .flag-GT {
   background-position: -37px -339px;
 }
+
 .flag-HN {
   background-position: -4px -360px;
 }
+
 .flag-HT {
   background-position: -37px -360px;
 }
+
 .flag-HU {
   background-position: -4px -381px;
 }
+
 .flag-ID {
   background-position: -37px -381px;
 }
+
 .flag-IE {
   background-position: -4px -402px;
 }
+
 .flag-IL {
   background-position: -37px -402px;
 }
+
 .flag-IN {
   background-position: -4px -423px;
 }
+
 .flag-IQ {
   background-position: -37px -423px;
 }
+
 .flag-IR {
   background-position: -4px -444px;
 }
+
 .flag-IT {
   background-position: -37px -444px;
 }
+
 .flag-JM {
   background-position: -4px -465px;
 }
+
 .flag-JO {
   background-position: -37px -465px;
 }
+
 .flag-JP {
   background-position: -4px -486px;
 }
+
 .flag-KG {
   background-position: -37px -486px;
 }
+
 .flag-KN {
   background-position: -4px -507px;
 }
+
 .flag-KP {
   background-position: -37px -507px;
 }
+
 .flag-KR {
   background-position: -4px -528px;
 }
+
 .flag-KW {
   background-position: -37px -528px;
 }
+
 .flag-KZ {
   background-position: -4px -549px;
 }
+
 .flag-LA {
   background-position: -37px -549px;
 }
+
 .flag-LB {
   background-position: -4px -570px;
 }
+
 .flag-LC {
   background-position: -37px -570px;
 }
+
 .flag-LS {
   background-position: -4px -591px;
 }
+
 .flag-LU {
   background-position: -37px -591px;
 }
+
 .flag-LV {
   background-position: -4px -612px;
 }
+
 .flag-MG {
   background-position: -37px -612px;
 }
+
 .flag-MK {
   background-position: -4px -633px;
 }
+
 .flag-ML {
   background-position: -37px -633px;
 }
+
 .flag-MM {
   background-position: -4px -654px;
 }
+
 .flag-MT {
   background-position: -37px -654px;
 }
+
 .flag-MX {
   background-position: -4px -675px;
 }
+
 .flag-NA {
   background-position: -37px -675px;
 }
+
 .flag-NE {
   background-position: -4px -696px;
 }
+
 .flag-NG {
   background-position: -37px -696px;
 }
+
 .flag-NI {
   background-position: -4px -717px;
 }
+
 .flag-NL {
   background-position: -37px -717px;
 }
+
 .flag-NO {
   background-position: -4px -738px;
 }
+
 .flag-OM {
   background-position: -37px -738px;
 }
+
 .flag-PA {
   background-position: -4px -759px;
 }
+
 .flag-PE {
   background-position: -37px -759px;
 }
+
 .flag-PG {
   background-position: -4px -780px;
 }
+
 .flag-PK {
   background-position: -37px -780px;
 }
+
 .flag-PL {
   background-position: -4px -801px;
 }
+
 .flag-PT {
   background-position: -37px -801px;
 }
+
 .flag-PY {
   background-position: -4px -822px;
 }
+
 .flag-QA {
   background-position: -37px -822px;
 }
+
 .flag-RO {
   background-position: -4px -843px;
 }
+
 .flag-RU {
   background-position: -37px -843px;
 }
+
 .flag-RW {
   background-position: -4px -864px;
 }
+
 .flag-SA {
   background-position: -37px -864px;
 }
+
 .flag-SE {
   background-position: -4px -885px;
 }
+
 .flag-SG {
   background-position: -37px -885px;
 }
+
 .flag-SL {
   background-position: -4px -906px;
 }
+
 .flag-SN {
   background-position: -37px -906px;
 }
+
 .flag-SO {
   background-position: -4px -927px;
 }
+
 .flag-SV {
   background-position: -37px -927px;
 }
+
 .flag-TD {
   background-position: -4px -948px;
 }
+
 .flag-TJ {
   background-position: -37px -948px;
 }
+
 .flag-TL {
   background-position: -4px -969px;
 }
+
 .flag-TR {
   background-position: -37px -969px;
 }
+
 .flag-TZ {
   background-position: -4px -990px;
 }
+
 .flag-UA {
   background-position: -37px -990px;
 }
+
 .flag-US {
   background-position: -4px -1011px;
 }
+
 .flag-VE {
   background-position: -37px -1011px;
 }
+
 .flag-VN {
   background-position: -4px -1032px;
 }
+
 .flag-YE {
   background-position: -37px -1032px;
+}
+
+.mpMenuNavbar {
+  background-color: rgba(26, 23, 23, 0.636);
+  height: 4em;
+  display: flex;
+  flex-flow: row;
+  padding: 0;
+  margin: 0;
+  filter: drop-shadow(0px 0px 0.5em rgba(0, 0, 0, 0.5));
+}
+
+.mpMenuNavbar .nav-item {
+  color: white;
+  padding: 0 1em;
+  height: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-flow: row;
+}
+
+.clickable {
+  border-width: 0.1em;
+  border-style: solid;
+  border-color: rgba(34, 33, 33, 0);
+  transition: border-color 0.2s ease-in-out;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.clickable:hover {
+  background-color: rgba(26, 23, 23, 0.736);
+  border-color: var(--clean-red);
+}
+
+.clickable:active {
+  background-color: rgba(26, 23, 23, 0.836);
 }
