--- a/ui/modules/apps/BeamMP-Chat/app.css
+++ b/ui/modules/apps/BeamMP-Chat/app.css
@@ -1,4 +1,4 @@
-/* BeamNG Multiplayer Chat Styling */
+/* BeamMP Multiplayer Chat Styling */
 /* This is a backup file. */
 /* This file is only used for reference. */
 
@@ -79,7 +79,7 @@
 
 /*Buttons Hover Styling*/
 .buttons:hover {
-    background-color: rgb(212, 100, 26, 1.0); /*BeamNG Orange */
+    background-color: rgb(212, 100, 26, 1.0); /*BeamMP Orange */
 }
 
 /*Swap Button Styling*/
