--- a/ui/modules/multiplayerPause/pause.css
+++ b/ui/modules/multiplayerPause/pause.css
@@ -1,3 +1,8 @@
+.md-danger {
+  background-color: rgba(255,0,0, 0.6) !important;
+  padding: 0px 8px !important;
+}
+
 .multiplayer-pause-container {
   display: flex;
   flex-direction: column;
@@ -36,14 +41,41 @@
   overflow-y: scroll;
   border: solid 2px #ff660099;
   margin: 5px;
-  border-radius: 4px;
+  border-radius: 0.25em;
+}
+
+.sideContentTop::-webkit-scrollbar-thumb {
+  border: 3px solid transparent;
+  border-radius: 0.25em;
+  background-clip: padding-box;  
+}
+
+.sideContentTop::-webkit-scrollbar {
+  width: 12px;
 }
 
 .sideContentBottom {
-  min-height: 30%;
+  min-height: 24.5%;
   max-height: 30%;
   overflow-y: scroll;
   border: solid 2px #ff660099;
   margin: 5px;
-  border-radius: 4px;
+  border-radius: 0.25em;
+}
+
+.player-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 8px;
+}
+
+.player-name {
+  flex-grow: 1;
+}
+
+.button-group {
+  display: flex;
+  gap: 8px;
 }
