--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -10,6 +10,10 @@
   background: #404040b8;
 }
 
+#serverListHeader {
+	position: fixed;
+}
+
 #left-menu {
   color: white;
   background-color: #404040b8;
@@ -26,10 +30,42 @@
   height: 100%;
 }
 
+/*
+Correct way, but breaks  table formatting badly
+*/
+/*
 table#serversTable {
   width: 100%;
   color: white;
+  margin-top: 75px;
 }
+
+table#serversTable tbody {
+	display: block;
+	overflow: auto;
+	height: 700px;
+}
+
+#serversTableHead, #serversTableBody tr {
+	display: table;
+	width: 100%;
+}
+*/
+
+/*
+Not as good but does not break the table formatting
+*/
+
+table#serversTable {
+  width: 100%;
+  color: white;
+  margin-top: 75px;
+  display: block;
+  overflow: auto;
+  height: 700px;
+}
+
+/* Both previous solutions are not that great though as the table is not flexible. It does not fill the visible area. */
 
 #serversTable th {
   background-color: rgba(0, 0, 0, 0);
