--- a/ui/modules/multiplayer/mphome.css
+++ b/ui/modules/multiplayer/mphome.css
@@ -27,6 +27,10 @@
   cursor: pointer;
 }
 
+.clickable:focus {
+  border: none;
+}
+
 .clickable:hover {
   background-color: rgba(26, 23, 23, 0.736);
   border-color: var(--bng-orange-shade1);
