Rename css style to make more sense

--- a/ui/modules/multiplayer/multiplayer.css
+++ b/ui/modules/multiplayer/multiplayer.css
@@ -15,7 +15,7 @@
   background-color: #404040b8;
 }
 
-#map-select {
+#filter-dropdown {
   height: 40px;
   background: unset;
   color: white !important;
